byte-code-compiler/test_files/typing/bad/testfile-redef-1.psc
struct S { int_32 a; };
struct S { int_32 a; };
